--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "axios": "^0.27.2",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "loginradius-react": "^0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "3.0.4",
+    "react-chatbot-kit": "^2.1.0",
     "react-countup": "6.3.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "3.10.13",
