--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "axios": "^0.27.2",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "jsonwebtoken": "^8.5.1",
     "loginradius-react": "^0.2.0",
+    "postcss": "^8.4.16",
+    "postcss-normalize": "^10.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "3.0.4",
@@ -79,6 +82,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.2",
     "prettier": "2.7.1"
   }
 }
